--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     background-color: aliceblue;
   }
 
@@ -16,9 +16,9 @@
     justify-content: space-between;
     align-items: center;
     position: sticky;
-    width: 100vw;
+    width: 100%;
     height: 10vh;
-    top:0;
+    top: 0;
     z-index: 1;
   }
 
@@ -28,15 +28,21 @@
   }
 
   .hidden-box {
-    height: 8vh;
-    width: 8vh;
+    height: 7vh;
+    width: 7vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: aliceblue;
     border-radius: 50%;
-    margin: 0 8vw;
-    transition: 0.4s;
+    margin: 4vw;
+    transition: 0.5s;
+  }
+
+  .hidden-box:hover {
+    background-color: black;
+    border: solid aliceblue .1vh;
+    transition: 0.5s;
   }
 
   .opened-box {
@@ -55,19 +61,29 @@
   }
 
   .opened-box ul {
-    list-style: none;
+    list-style:none;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-around;
-    align-items: flex-end;
+    align-items: stretch;
   }
 
   .opened-box li {
-    background-color: black;
-    color: aliceblue;
+    border: aliceblue solid 0.5vh;
     margin: 1vw;
     padding: 1vh;
     border-radius: 10px;
+    width: 43vw;
+    text-align: center;
+    transition: 1s;
+  }
+
+  .opened-box li:hover {
+    cursor: pointer;
+    background-color: black;
+    border: solid aliceblue 0.2;
+    transition: 1s;
+    transform: scale(1.1);
   }
 
   .hidden {
@@ -84,25 +100,26 @@
     cursor: pointer;
     flex-flow: column nowrap;
     justify-content: space-around;
+    align-items: center;
+    width: 4vh;
+    height: 4vh;
   }
 
   .bar1,
   .bar2,
   .bar3 {
     width: 9vw;
-    height: 0.5vh;
-    margin: 0.5vh 0;
+    height: 0.6vh;
     background-color: black;
     border-radius: 40px;
-    transition: 0.4s;
   }
 
   /* .change .bar1 {
     -webkit-transform: rotate(-45deg) translate(-2vw, 1vh);
     transform: rotate(-45deg) translate(-2vw, 1vh);
-  } */
+  }
 
-  /* .change .bar2 {
+  .change .bar2 {
     opacity: 0;
   }
 
@@ -111,45 +128,90 @@
     transform: rotate(45deg) translate(-2vw, -1.2vh);
   } */
   main {
-      padding: 2vw;
+    padding: 2vw;
   }
   #caixa-conteudo {
-      display: flex;
-      flex-flow: column nowrap;
+    display: flex;
+    flex-flow: column nowrap;
   }
   #descricao {
-      padding: 2vw;
+    padding: 2vw;
   }
 
   #hello-world {
-      display: flex;
-      flex-flow: column nowrap;
-      text-align: center;
-      justify-content: space-around;
-      align-items: center;
-      background-image: url(./manutenção/v1/construction-1921518.jpg);
-      background-size: cover;
-      border-radius: 40px;
-      height: 79vh;
-      color: aliceblue;
+    display: flex;
+    flex-flow: column nowrap;
+    text-align: center;
+    justify-content: space-around;
+    align-items: stretch;
+    background-image: url(./imagens/construction-1921518.jpg);
+    background-size: cover;
+    border-radius: 40px;
+    height: 79vh;
+    margin-top: 1.4vh;
+    color: aliceblue;
+  }
+
+  #first-call {
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+
+  #call-images {
+    display: flex;
+    align-items: flex-start;
+    flex-grow: 3;
+    flex-shrink: 1;
+    /* border: green solid 3px; */
   }
 
   #perfil {
-      border-radius: 50%;
-      padding: 2vh;
-      align-self: flex-start;
-  }
-  
-  #linkedin-logo {
-      width: 8vh;
-      height: 8vh;
-      border-radius: 50%;
+    border-radius: 50%;
+    align-self: flex-start;
+    width: 35%;
+    margin: 0 7vw;
   }
 
-  #github-logo {
-    width: 8vh;
-    height: 8vh;
-    border-radius: 50%;
+  #shortcut-logos {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly ;
+    align-items: flex-start;
+    /* border: red solid 3px; */
+  }
+
+  #shortcut-logos img {
+    width: 9vw;
+    height: 9vw;
+    margin: 1vh 0 0 0;
+    /* border: solid black 2px; */
+  }
+
+  #saiba-mais {
+    flex-grow: 3;
+    flex-shrink: 1;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  #know-more {
+    /* background-color: black; */
+    color: aliceblue;
+    margin: 1.5vh 0;
+    text-decoration: none;
+    width: 50vw;
+    border-radius: 10px;
+    border: solid aliceblue 0.5vh;
+    transition: 1s;
+    opacity: 0.6;
+  }
+
+  #know-more:hover {
+    background-color: black;
+    border: solid aliceblue 0.2;
+    transition: 1s;
+    opacity: 1;
   }
 
   #page-greetings {
@@ -158,70 +220,170 @@
     align-items: center;
     justify-content: space-around;
   }
-  
+
   #explain ul {
-      display: flex;
-      flex-flow: column nowrap;
-      align-items: center;
-      list-style: none inside;
-      padding: 2vw;
-      background-color: black;
-      border-radius: 20px;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    list-style: none inside;
+    padding: 2vw;
+    background-color: black;
+    border-radius: 20px;
   }
 
   #explain ul li {
-      background-color: dimgray;
-      color: black;
-      margin: 2vh;
-      border-radius: 20px;
-      padding: 2vw;
+    background-color: dimgray;
+    color: black;
+    margin: 2vh;
+    border-radius: 20px;
+    padding: 2vw;
   }
 
   #explain ul li h2 {
-      text-align: center;
-      margin-top: 0;
+    text-align: center;
+    margin-top: 0;
   }
 
   #explain ul li p {
-      text-align: justify;
+    text-align: justify;
   }
 
   #descricao h3 {
     text-align: center;
-}
+  }
 
   #selecoes {
-      display: flex;
-      flex-flow: column nowrap;
-      align-items: center;
-      justify-content: space-around;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: space-around;
   }
 
   #selecoes a {
-      background-color: black;
-      color: aliceblue;
-      padding: 1vh;
-      margin: .5vh;
-      border-radius: 10px;
-      width: 80vw;
+    background-color: black;
+    color: aliceblue;
+    padding: 1vh;
+    margin: 0.5vh;
+    border-radius: 10px;
+    width: 80vw;
+    transition: 1s;
   }
 
   #selecoes a:hover {
-      transform: scale(1.1);
+    transform: scale(1.1);
+    transition: 1s;
   }
 
   footer {
     background-color: black;
     color: aliceblue;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     position: sticky;
-    width: 100vw;
+    width: 100%;
     height: 5vh;
-    bottom:0;
+    bottom: 0;
     z-index: 1;
   }
+
+  #contatos {
+    align-self: stretch;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    flex-basis: 40%;
+  }
+
+  .contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 4vh;
+    width: 4vh;
+    transition: 0.5s;
+  }
+
+  .opened-cont {
+    display: flex;
+    flex-flow: column-reverse nowrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 30vh;
+    border-radius: 10px 10px 0 0;
+    transition: 0.5s;
+    opacity: 0.8;
+  }
+
+  .footer-spans {
+    transform: rotate(270deg);
+    font-size:small;
+    width: 25vw;
+    margin-top: 10vw;
+  }
+
+  #gmail-ico {
+    width: 6vw;
+    margin-bottom: 1vh;
+  }
+
+  .contact i {
+    margin-bottom: 1vh;
+  }
+
+  div.opened-cont.linkedin {
+    background-color: #0A66C2;
+  }
+
+  div.opened-cont.gmail {
+    background-image: linear-gradient(#4285F4, #C5221E, #EA4335, #FBBC04, #34A853 );
+  }
+
+  div.opened-cont.whatsapp {
+    background-color: #45C655;
+  }
+
+  div.opened-cont.github {
+    background-color: #24292F;
+  }
+
+  .feedback {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    height: inherit;
+  }
+
+  .feedback h6 {
+    margin-right: 1vh;
+  }
+
+  .feedback:hover {
+    cursor: pointer;
+  }
+
+  .feedback-opened {
+    width: 100vw;
+    height: 70vh;
+    align-self: flex-end;
+    background-color: black;
+    transition: 0.6s;
+    border-radius: 20px 20px 0 0;
+    justify-content: flex-start;
+  }
+
+  #barra-modal form {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  textarea {
+    width: 80%;
+  }
+
 }
 
 @media (min-width: 480px) {
