phone-chaser adicionado

--- a/style.css
+++ b/style.css
@@ -214,6 +214,11 @@
     color: inherit;
   }
 
+  .phone-chaser {
+    position: absolute;
+    top: 10vh;
+  }
+
   #home-chaser {
     position: absolute;
     top: 0;
