--- a/style.css
+++ b/style.css
@@ -45,19 +45,19 @@
     display: flex;
     cursor: pointer;
     flex-flow: column nowrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     width: 7vh;
     height: 7vh;
     padding: 2.5vw;
-    background-color: #F2F2F2;
+    border: solid #F2B33D 0.5vh;
     border-radius: 50%;
     transition: 0.5s;
   }
 
   #sand:hover {
+    border:solid #04d9d9 0.5vh;
     background-color: #0D0D0D;
-    border: solid #F2F2F2 0.3vh;
     transition: 0.5s;
   }
 
@@ -66,9 +66,13 @@
   .bar3 {
     width: 9vw;
     height: 0.6vh;
-    background-color: #0D0D0D;
+    background-color: #F2B33D;
     border-radius: 40px;
     transition: 0.4s;
+  }
+
+  #sand:hover .bar1, #sand:hover .bar2, #sand:hover .bar3 {
+    background-color: #04d9d9;
   }
 
     /* cod w3 schools com algumas alterações */
@@ -117,6 +121,7 @@
   }
 
   .opened-box a{
+    color: #F2B33D;
     width: 80%;
   }
 
@@ -138,6 +143,7 @@
     display: flex;
     justify-content: center;
     align-items:center;
+    z-index: 2;
   }
 
   #sticky-home i {
@@ -150,8 +156,8 @@
   }
 
   #sticky-home:hover i {
-    display: block;
-    color: #F2F2F2;
+    display: unset;
+    color: #BF6B04;
     font-size: x-large;
   }
 
@@ -444,39 +450,54 @@
 
   .feedback {
     display: flex;
-    flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    height: inherit;
+    opacity: 0.6;
+    transition: 0.4s;
   }
 
   .feedback h6 {
     margin-right: 1vh;
+    color: #F2B33D;
+  }
+
+  .feedback:hover h6 {
+    color: #04D9D9;
+  }
+  
+  .feedback h6 i {
+    color: #04D9D9;
+  }
+
+  .feedback:hover h6 i {
+    color: #F2B33D;
   }
 
   .feedback:hover {
     cursor: pointer;
+    opacity: 1;
+    transition: 0.4s;
   }
 
   .feedback-opened {
-    width: 100vw;
-    height: 70vh;
+    display: flex;
+    flex-flow: column nowrap;
     align-self: flex-end;
     background-color: #0D0D0D;
     transition: 0.6s;
     border-radius: 20px 20px 0 0;
     justify-content: flex-start;
+    align-items: center;
+    margin-right: 10vh;;
+    padding: 3vh;
   }
 
   #barra-modal form {
+    color: #0d0d0d;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-around;
     align-items: center;
-  }
-
-  textarea {
-    width: 80%;
   }
 
   .sm-hidden {
