--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@
   .bar1-1 {
     border-radius: 40px 0 0 40px;
     margin: -1.6vh 1.9vh 0.6vh auto;
-    animation-duration: 4s;
+    animation-duration: 2s;
     animation-name: clickMenuBar11;
     animation-play-state: paused;
     animation-timing-function: ease-in-out;
@@ -133,7 +133,7 @@
   .bar1-2 {
     border-radius: 0 40px 40px 0;
     margin: -1.6vh auto 0.6vh 1.9vh;
-    animation-duration: 4s;
+    animation-duration: 2s;
     animation-name: clickMenuBar12;
     animation-play-state: paused;
     animation-timing-function: ease-in-out;
@@ -152,14 +152,14 @@
   .bar2 {
     animation-name: clickMenuBar2;
     animation-play-state: paused;
-    animation-duration: 4s;
+    animation-duration: 2s;
     animation-timing-function: ease-in-out;
   }
 
   .bar3 {
     animation-name: clickMenuBar3;
     animation-play-state: paused;
-    animation-duration: 4s;
+    animation-duration: 2s;
     animation-timing-function: ease-in-out;
     margin-top: 2.3vh;
   }
@@ -170,6 +170,8 @@
     }
     49% {
       background-color: inherit;
+    }
+    50% {
       transform: translate(0, 1.6vh);
     }
     100% {
@@ -183,6 +185,8 @@
   }
   49% {
     background-color: inherit;
+  }
+  50% {
     transform: translate(0, 1.6vh);
   }
   100% {
@@ -198,13 +202,37 @@
     transform: rotate(0deg);
   }
   50% {
+    transform: rotate(0deg);
+  }
+  55% {
+    transform: rotate(15deg);
+  }
+  60% {
+    transform: rotate(30deg);
+  }
+  65% {
     transform: rotate(45deg);
   }
+  70% {
+    transform: rotate(60deg);
+  }
   75% {
+    transform: rotate(75deg);
+  }
+  80% {
+    transform: rotate(90deg);
+  }
+  85% {
+    transform: rotate(105deg);
+  }
+  90% {
+    transform: rotate(120deg);
+  }
+  95% {
     transform: rotate(135deg);
   }
   100% {
-    transform: rotate(225deg);
+    transform: rotate(135deg);
   }
 }
 
@@ -212,20 +240,38 @@
   25% {
     transform: translate(0, -0.6vh);
   }
-  49% {
+  50% {
     transform: translate(0, -1.2vh);
   }
-  50% {
-    transition: 2s;
+  55% {
+    transform: translate(0, -1.2vh) rotate(-15deg);
+  }
+  60% {
+    transform: translate(0, -1.2vh) rotate(-30deg);
+  }
+  65% {
     transform: translate(0, -1.2vh) rotate(-45deg);
   }
+  70% {
+    transform: translate(0, -1.2vh) rotate(-60deg);
+  }
   75% {
-    transition: 2s;
+    transform: translate(0, -1.2vh) rotate(-75deg);
+  }
+  80% {
+    transform: translate(0, -1.2vh) rotate(-90deg);
+  }
+  85% {
+    transform: translate(0, -1.2vh) rotate(-105deg);
+  }
+  90% {
+    transform: translate(0, -1.2vh) rotate(-120deg);
+  }
+  95% {
     transform: translate(0, -1.2vh) rotate(-135deg);
   }
   100% {
-    transition: 2s;
-    transform: translate(0, -1.2vh) rotate(-225deg);
+    transform: translate(0, -1.2vh) rotate(-135deg);
   }
 }
 
