--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   text-decoration: none;
   color: unset;
   scroll-behavior:smooth;
+  overflow: hidden;
 }
 
 @media (min-width: 320px) {
@@ -60,6 +61,7 @@
     width: 100%;
     height: 10vh;
     z-index:2;
+    overflow: visible;
   }
 
   header h1 {
@@ -515,6 +517,7 @@
     height: 5vh;
     bottom: 0;
     z-index: 1;
+    overflow: visible;
   }
 
   .stickers {
